Alterações finais, ajuste no áudio, ajuste do padding

--- a/src/pages/random/random.html
+++ b/src/pages/random/random.html
@@ -3,6 +3,7 @@
   <span class="pulse" (click)="goToRandom()" [ngClass]="showBtnBack ? 'show-btn-back' : ''">
     <img src="./assets/imgs/btn_play.png" alt="">
   </span>
+  <img src="./assets/imgs/btn_back.png" class="back" alt="" [ngClass]="showBtnBack ? 'show-btn-back' : ''" (click)="goToHome()">
 
   <ion-slides>
     <ion-slide *ngFor="let image of images" [ngStyle]="{'background-image': 'url(./assets/imgs/'+image+')'}"></ion-slide>
