--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,4 +3,8 @@
   <span class="pulse" (click)="goToRandom()">
     <img src="./assets/imgs/btn_play.png" alt="">
   </span>
+  <span class="mute" (click)="mute()">
+    <ion-icon name="volume-off" *ngIf="muted"></ion-icon>
+    <ion-icon name="volume-up" *ngIf="!muted"></ion-icon>
+  </span>
 </ion-content>
