--- a/src/pages/curiosity/curiosity.html
+++ b/src/pages/curiosity/curiosity.html
@@ -4,12 +4,143 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-header>
-  <ion-navbar>
+<ion-header no-border>
+  <ion-navbar transparent>
   </ion-navbar>
 </ion-header>
 
 
 <ion-content padding>
-  
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+          <h1><ion-icon ios="ios-bulb" md="ios-bulb"></ion-icon> Curiosidades<br><small>Do Fundo do Mar</small></h1>
+          <ul class="info">
+              <li>O fundo do mar é um local frio, escuro, com muita pressão, pouco alimento e visibilidade zero. </li>
+              <li>Como a luz do sol só consegue penetrar até 30 metros na água o fundo do mar se torna extremamente gelado, com temperaturas entre 0 a 4ºC</li>
+              <li>O Fundo do mar possui vários vulcões ativos, muito mais do que a superfície terrestre e também a maior cadeia de montanhas do mundo.</li>
+              <li>Conta com um tesouro especial, só na costa brasileira, estima-se que existam 11 mil embarcações naufragadas.</li>
+              <li>As espécies marinhas que vivem no fundo do mar são biologicamente preparadas para suportar a pressão das águas, assim como os seres humanos que são adaptados para suportar a pressão atmosférica.</li>
+              <li>O ponto mais fundo do mar está a 11.500 metros de profundidade, localizado na Fossa das Marianas, Micronésia.</li>
+              <li>
+                É no fundo do mar que temos o maior invertebrado do mundo: a lula-gigante, com 18 metros e 900 quilos. Ela vive a 1.000 metros de profundidade. A lula tem oito braços e ainda mais um par de tentáculos e nadadeiras ao longo do corpo. As lulas nadam bem perto da superfície.
+                <img src="./assets/imgs/info/lula.jpg" alt="">
+              </li>
+              <li>A Baleia-azul é o maior animal da Terra. Ela é tão grande que cinquenta pessoas poderiam ficar na sua língua e um bebê humano poderia engatinhar através das principais artérias desse animal.</li>
+              <li>
+                Ela é o animal mais barulhento do mar. A intensidade do barulho que ela emite pode chegar a 188 decibéis, que são mais fortes que o som de um avião a jato, e atingem uma distância de 800 km.
+                <img src="./assets/imgs/info/baleia_azul.jpg" alt="">
+              </li>
+              <li>Tartarugas-marinhas vivem no mar, são sete espécies conhecidas, todas elas ameaçadas de extinção. A maioria das espécies são migratórias e viajam pelos oceanos. Elas se orientam pelo campo magnético terrestre. </li>
+              <li>
+                A tartaruga-de-couro é a maior, e pode ter até 2 metros de comprimento, 1 metro e meio de largura e 600 kg de peso.
+                <img src="./assets/imgs/info/tartaruga.jpg" alt="">
+              </li>
+              <li>O cavalo-marinho é um peixe ósseo. Existem 32 espécies diferentes de cavalos-marinhos de diversas cores e tamanhos, vivendo nos mares em profundidades entre 8 e 45 metros.</li>
+              <li>
+                Algumas espécies são especialistas em camuflagem e parecem muito com uma plantinha. Isso os protege dos predadores. O macho dessa espécie fica responsável por gerar os filhotes. São animais frágeis, lindos, complexos, delicados e pouco estudados.
+                <img src="./assets/imgs/info/cavalo_marinho.jpg" alt="">
+              </li>
+              <li>O peixe borboleta tem seu focinho pequeno e é como uma tesoura, sua boca só abre o suficiente para sugar animais minúsculos ou camarões pequenos que vivem entre as fendas dos corais.</li>
+              <li>
+                Alguns peixes-borboleta aceitam que camarões maiores o "limpem" de pequenos parasitas que grudam no corpo do peixe. Os camarões fazem isso para se alimentar dos minúsculos parasitas. É uma ajuda mútua. No Brasil, são facilmente encontrados próximos a corais e naufrágios.
+                <img src="./assets/imgs/info/peixe.jpg" alt="">
+              </li>
+              <li>Tubarão são peixes cartilagíneos, que possuem esqueleto flexível. Existem cerca de 400 espécies de tubarão, grandes e pequenos. Um tubarão vive em média entre 20 e 45 anos, ele não para de nadir e gasta muita energia, por isso possuem uma super digestão, tornando-os famintos e eles precisam comer constantemente. O tubarão é míope, por isso seu sistema sensorial é fantástico, possui algo chamado de “linha lateral” que é capaz de detectar as mudanças de pressão da água. Existem cerca de 450 espécies diferentes de tubarão. </li>
+              <li>
+                Apenas algumas espécies atacam os seres humanos, na grande maioria dos casos são as espécies tubarão branco, tubarão tigre ou tubarão cabeça-chata. O maior tubarão que existe é o tubarão-baleia que chega a 20 metros de comprimento.
+                <img src="./assets/imgs/info/tubarao.jpg" alt="">
+              </li>
+              <li>
+                  Tubarão goblin pode ter de 3 a 4 metros de comprimento. Também são chamados de fósseis vivos, já que vem de uma linhagem de mais de 125 milhões de anos. A espécie pode desencaixar parte da boca para conseguir comer animais maiores. O tubarão-duende vive até 1.300 metros abaixo do nível do mar. Ele tem caudas que se parecem com as das enguias, crescem até cerca de 3,5 metros de comprimento. Eles examinam o fundo do mar com focinhos super-longos, detectando as minúsculas correntes elétricas emitidas por todas as coisas vivas.
+                <img src="./assets/imgs/info/tubarao_2.jpg" alt="">
+              </li>
+              <li>
+                  O tubarão enrugado é capaz de gerar a própria iluminação, que pode ser utilizada para atrair parceiros de acasalamento ou presas. A espécie possui cerca de 300 dentes em forma de tridentes organizados em 25 linhas, podendo medir cerca de 1,7m, no caso de machos, ou 2m, no caso de fêmeas. Acredita-se que a espécie seja dona do recorde de tempo de gestação entre tubarões, com três anos e meio.
+                  <img src="./assets/imgs/info/tubarao_enrugado.jpg" alt="">
+              </li>
+              <li>
+                  Peixe-leão são peixes marinhos venenosos. Possuem espinhos venenosos que são mesmo perigosos e podem causar inchaço e muita dor. Esse veneno produzido pelo peixe-leão se desmancha no calor, sendo chamado de termosensível. O peixe-leão pode viver até 15 anos.
+                  <img src="./assets/imgs/info/peixe_leao.jpg" alt="">
+              </li>
+              <li>As arraias são peixes cartilaginosos, como os tubarões. Existem arraias de diversos tamanhos e cores diferentes. Ela fica quase o tempo todo parada no fundo, parcialmente coberta por areia.</li>              
+              <li>A maioria das arraias são carnívoras, em todo mundo são descritas mais de 400 espécies com tamanho variando de 0,15 a 7 metros de comprimento.</li>              
+              <li>
+                  Em geral, a maioria das arraias possuem formato de disco, com a cauda fina e comprida provida ou não de um ou mais ferrões venenosos, que podem causar ferimentos dolorosos.
+                  <img src="./assets/imgs/info/raia.jpg" alt="">
+              </li>
+              <li>
+                  As moréias são conhecidas por não terem nadadeiras, elas lembram as cobras, nadam ondulando o corpo e rastejam para se esconder na areia. Se alimentam de qualquer animal que passe perto da sua toca, são conhecidas mais de 30 espécies diferentes no Brasil
+                  <img src="./assets/imgs/info/moreias.jpg" alt="">
+              </li>
+              <li>
+                  Os polvos são moluscos marinhos com oito tentáculos com fortes ventosas que ficam em volta de sua boca, tem o corpo mole e não possui esqueleto. Ele solta uma tinta preta quando se sente ameaçado, a fim de confundir o predador e fugir. Podem mudar de cor para parecer com o ambiente ou com outros animais.
+                  <img src="./assets/imgs/info/polvo.jpg" alt="">
+              </li>
+              <li>
+                  O polvo dumbo é um pequeno polvo que mede de 20 a 30 cm, mas já foi encontrado medindo até 1,8m. É extremamente raro e fica flutuando pelas profundezas a partir da criação de pulsos com suas barbatanas que se parecem com pequenos braços ou com suas "orelhas". Quando combinadas, as técnicas podem fazer o animal se mover mais rapidamente.
+                  <img src="./assets/imgs/info/polvo_dumbo.jpg" alt="">
+              </li>
+              <li>
+                  As lagostas são crustáceos, onde o corpo é revestido com uma carapaça dura e com espinhos. Algumas espécies chegam a ter até 50 cm de comprimento. Gostam de locais de vegetação ou áreas rochosas, onde se escondem durante o dia e a noite saem em busca de alimentos. Se alimentam principalmente de animais mortos.
+                  <img src="./assets/imgs/info/lagosta.jpg" alt="">
+              </li>
+              <li>
+                  Os corais parecem pedras e as anêmonas parecem plantas, mas ambos são animais marinhos. São muito importantes para a manutenção da vida marinha. São organismos fixos, não se movem como um peixe. Eles protegem e abrigam muitas espécies de peixes.
+                  <img src="./assets/imgs/info/corais.jpg" alt="">
+              </li>
+              <li>
+                  A água viva não possui ossos, cérebro, nem coração, ela possui nervos sensoriais na base de seus tentáculos para se orientar e detectar odores e luz. É um animal que tem a boca no meio do corpo, envolvida por tentáculos. Os seus tentáculos podem causar queimaduras, geralmente não causa maior dano que um ardor local, mas algumas espécies possuem um componente químico que pode até ser fatal.
+                  <img src="./assets/imgs/info/agua_viva.jpg" alt="">
+              </li>
+              <li>
+                  Estrela do mar é da classe asteroide, possuem cinco ou mais braços e são aproximadamente 1600 espécies. Possuem endoesqueleto sendo bastante superficial revestido por uma fina camada de epiderme. Se ela perder algum braço possui a capacidade de regenerar. São animais predadores que caçam e se alimentam de outros animais maiores que ela. Se concentram mais em águas quentes. A estrela do mar pode colocar o estomago para fora do corpo para se alimentar, é a única no Reino Animal a fazer isso.  Não possuem coração, mas sim um liquido com função parecida com a do sangue, chamada hemolinfa.
+                  <img src="./assets/imgs/info/estrela_mar.jpg" alt="">
+              </li>
+              <li>
+                  O peixe Remo mede aproximadamente 11 metros de comprimento, sendo o maior peixe ósseo do mundo, não possui escamas e sim um revestimento prateado viscoso, ele se alimenta de pequenos peixes. É um animal que vive em águas profundas, e por isso é mais sensível aos movimentos das falhas ativas, e costuma aparecer na praia antes de grandes maremotos. 
+                  <img src="./assets/imgs/info/peixe_remo.jpg" alt="">
+              </li>
+              <li>
+                  O estranho pepino do mar vive nas profundezas e possui uma série de pés tubulares ao redor de seu corpo, utilizando os membros como principal forma de locomoção. Além disso, sua principal característica é uma transparência peculiar que mostra o interior de seu corpo e parte de seus órgãos complexos
+                  <img src="./assets/imgs/info/pepino_mar.jpg" alt="">
+              </li>
+              <li>
+                  O camarão é conhecido como o lixeiro do mar, pois se alimenta de animais mortos e de quase todo o tipo de lixo, mas também podem se alimentar de insetos aquáticos, larvas e de pequenos peixes. Possui longas patas e podem chegar a ter até 20 centímetros de comprimento.
+                  <img src="./assets/imgs/info/camarao.jpg" alt="">
+              </li>
+              <li>
+                  Os caranguejos sobrevivem dentro e fora da água, possuem 10 patas e uma carapaça bem rígida. Os caranguejos andam de lado, pois suas patas são dobradas de maneira lateral, eles até conseguem andar para frente e para trás, mas bem lentamente.
+                  <img src="./assets/imgs/info/caranguejo.jpg" alt="">
+              </li>
+              <li>
+                  O caranguejo aranha gigante é o maior caranguejo da terra vive a até 305 metros abaixo do nível do mar e pode medir até 3,60 cm de uma garra até a outra.
+                  <img src="./assets/imgs/info/caranguejo_aranha.png" alt="">
+              </li>
+              <li>
+                  Macropinna também conhecido como peixe fantasma, é um peixe com uma composição muito rara onde sua cabeça é coberta por uma cúpula transparente, cheia de líquido. Além disso, tem olhos em forma de barril que apontam para cima através da cúpula, enquanto descansa no fundo do mar.
+                  <img src="./assets/imgs/info/peixe_transparente.png" alt="">
+              </li>
+              <li>
+                  O peixe-bolha ou peixe-gota, é um peixe de águas profundas, podem chega a ter até 30 cm de comprimento. Habita águas entre os 600 e os 1 200 m de profundidade. A pressão é muito maior do que na superfície, por isso o peixe-bolha possui uma massa corporal de aparência gelatinosa, o que permite ao peixe-bolha conseguir flutuar sem se afundar, e sem necessitar de gastar muita energia a nadar. Alimenta-se principalmente de crustáceos e outros alimentos que flutuem perto de si, já que ele não possui tecido muscular nem uma estrutura óssea que o suporte, ele não pode caçar. 
+                  <img src="./assets/imgs/info/peixe_bolha.jpg" alt="">
+              </li>
+              <li>
+                  Isópodes gigantes também conhecidos como tatuzinhos do mar e tem sido encontrado em profundidades de mais de 2.000 metros. Eles crescem até cerca de 30 cm de comprimento e se alimentam principalmente de carniça, mas também são conhecidos por apanhar presas vivas. Essa espécie é um sobrevivente. Eles estão por aqui desde que todos os continentes estavam unidos em um aglomerado conhecido como Pangea e eles podem ficar quatro anos sem comer.
+                  <img src="./assets/imgs/info/isopodes.jpg" alt="">
+              </li>
+              <li>
+                  O peixe-víbora do pacífico vive a 4.500 metros abaixo da superfície. Eles caçam atraindo presas com suas barrigas brilhantes. Seus dentes são tão grandes que eles não podem fechar suas bocas.
+                  <img src="./assets/imgs/info/peixe_vibora.png" alt="">
+              </li>
+              <li>
+                  O peixe diabo negro habita a profundidades elevadas chegando até a 5 000 metros. Na escuridão total, atrai suas presas por meio de uma falsa isca que pende logo acima de sua imensa boca, leva uma luzinha na ponta, trata-se de um orgão produtor de luz chamado fotóforo. A dele é tão grande que ele pode abocanhar presas com quase o seu tamanho. Para não morrer de fome, o macho cola ao corpo da fêmea vivendo como um parasita. Em uma fêmea é possível serem encontrados até 6 machos.
+                  <img src="./assets/imgs/info/peixe_negro.jpg" alt="">
+              </li>
+            </ul> 
+          
+
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
